--- a/frontend/src/components/specialtiesBlock/specialties.scss
+++ b/frontend/src/components/specialtiesBlock/specialties.scss
@@ -1,11 +1,13 @@
 .knowledge {
   &-block {
     margin-top: 99px;
-    padding: 143px 0;
+    padding: 143px 0 0;
+    margin-bottom: 143px;
     width: 100%;
     display: flex;
     align-items: center;
     gap: 100px;
+    position: relative;
 
     ul {
       display: flex;
@@ -13,11 +15,10 @@
       gap: 40px;
 
       &:first-child {
-        position: relative;
         &::after {
           content: "";
           position: absolute;
-          width: 100%;
+          width: 30%;
           height: 100%;
           border-radius: 0 30% 40% 0;
           left: 0;
@@ -33,11 +34,10 @@
       }
 
       &:last-child {
-        position: relative;
         &::after {
           content: "";
           position: absolute;
-          width: 100%;
+          width: 30%;
           height: 100%;
           right: 0;
           border-radius: 0 0 0 100%;
