--- a/frontend/src/components/aboutHeader/aboutHeader.scss
+++ b/frontend/src/components/aboutHeader/aboutHeader.scss
@@ -1,5 +1,14 @@
 .header {
   width: 100%;
+  position: relative;
+  .bg-color{
+    position: absolute;
+    bottom: 0;
+    left: -10px;
+    opacity: 0.3;
+    z-index: -1;
+  }
+
   &-title {
     text-align: center;
     font-weight: 500;
