--- a/src/components/signIn/signIn.scss
+++ b/src/components/signIn/signIn.scss
@@ -96,37 +96,47 @@
       line-height: 24px;
     }
 
-    .sign-header{
+    .sign-header {
       display: flex;
       flex-direction: column;
-      gap: 58px;
+      gap: 35px;
       position: relative;
-      padding-bottom: 36px;
+      .separator-bar {
+        position: relative;
+        display: flex;
+        justify-content: center;
 
-      &::after{
-        content: '';
-        bottom: 0;
-        left: 0;
-        right: 0;
-        position: absolute;
-        height: 1px;
-        background-color: #ff5600;
-        width: 100%;
+        .separator-text {
+          font-weight: 300;
+          font-size: 14px;
+          line-height: 17px;
+          display: flex;
+          align-items: center;
+          text-align: center;
+          color: #ededed;
+          opacity: 0.5;
+        }
+
+        &::after {
+          content: "";
+          bottom: 16px;
+          left: 0;
+          position: absolute;
+          height: 1px;
+          background-color: #ff5600;
+          width: 40%;
+        }
+
+        &::before {
+          content: "";
+          bottom: 16px;
+          right: 0;
+          position: absolute;
+          height: 1px;
+          background-color: #ff5600;
+          width: 40%;
+        }
       }
-
-      &::before{
-        content: 'або';
-        bottom: 0;
-        left: 0;
-        right: 0;
-        position: absolute;
-        height: 1px;
-        background-color: transparent;
-        width: max-content;
-        color: #EDEDED;
-        opacity: 0.5;
-      }
-
     }
 
     .google-content {
@@ -146,15 +156,22 @@
         line-height: 17px;
         color: #ffffff;
       }
-
     }
 
-    .reset-password {
-      font-weight: 300;
-      font-size: 14px;
-      line-height: 17px;
-      text-align: center;
-      color: #ff5600;
+    .reset-btn-content{
+      display: flex;
+      justify-content: center;
+
+      .btn-reset-password {
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+        color: #ff5600;
+        background-color: transparent;
+        width: max-content;
+        border: none;
+      }
     }
 
     &::after {
