--- a/src/index.css
+++ b/src/index.css
@@ -134,6 +134,28 @@ code {
     monospace;
 }
 
+.app-container{
+  max-width: 1920px;
+  margin: auto;
+}
+
+@media only screen and (max-width: 1919px) {
+  .app-container{
+    display: none;
+  }
+}
+
+
+.small-screen{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 900px;
+  margin: auto;
+  color: #ededed;
+}
+
+
 p,
 li,
 ul,
