--- a/src/index.css
+++ b/src/index.css
@@ -1,146 +1,231 @@
-
 @font-face {
-  font-family: 'eUkraine';
+  font-family: "eUkraine";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Thin.ttf)
+      format("truetype");
   font-weight: 100;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraine';
+  font-family: "eUkraine";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-UltraLight.ttf)
+      format("truetype");
   font-weight: 200;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraine';
+  font-family: "eUkraine";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Light.ttf)
+      format("truetype");
   font-weight: 300;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraine';
+  font-family: "eUkraine";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Regular.ttf)
+      format("truetype");
   font-weight: 400;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraine';
+  font-family: "eUkraine";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Medium.ttf)
+      format("truetype");
   font-weight: 600;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraine';
+  font-family: "eUkraine";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-Ukraine-Bold.ttf)
+      format("truetype");
   font-weight: 700;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraineHead';
+  font-family: "eUkraineHead";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Thin.ttf)
+      format("truetype");
   font-weight: 100;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraineHead';
+  font-family: "eUkraineHead";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-UltraLight.ttf)
+      format("truetype");
   font-weight: 200;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraineHead';
+  font-family: "eUkraineHead";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Light.ttf)
+      format("truetype");
   font-weight: 300;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraineHead';
+  font-family: "eUkraineHead";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Regular.ttf)
+      format("truetype");
   font-weight: 400;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraineHead';
+  font-family: "eUkraineHead";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Medium.ttf)
+      format("truetype");
   font-weight: 600;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraineHead';
+  font-family: "eUkraineHead";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-Bold.ttf)
+      format("truetype");
   font-weight: 700;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'eUkraineHead';
+  font-family: "eUkraineHead";
   src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.eot);
-  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.eot?#iefix) format("embedded-opentype"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.woff2) format("woff2"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.woff) format("woff"), url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.ttf) format("truetype");
+  src: url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.eot?#iefix)
+      format("embedded-opentype"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.woff2)
+      format("woff2"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.woff)
+      format("woff"),
+    url(./e-Ukraine-master/e-Ukraine-master/static/fonts/e-UkraineHead-NAME.ttf)
+      format("truetype");
   font-weight: 900;
   font-style: normal;
-  font-display: swap
+  font-display: swap;
 }
-
-
 
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #0F0F0F;
+  background: #0f0f0f;
   overflow-x: hidden;
-  font-family: 'eUkraine', sans-serif !important;
+  font-family: "eUkraine", sans-serif !important;
 }
-
-
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.app-container{
+.app-container {
   max-width: 1920px;
   margin: auto;
 }
 
-
-.small-screen{
+.small-screen {
   display: none;
   justify-content: center;
   align-items: center;
@@ -150,22 +235,19 @@ code {
 }
 
 @media only screen and (max-width: 1919px) {
-  .app-container{
+  .app-container {
     display: none;
   }
 
-  .small-screen{
+  .small-screen {
     display: flex;
   }
 }
 
-
 p,
-li,
-ul,
-h3 {
-  font-family: "eUkraine";
-  font-style: normal;
+li {
+  margin: 0;
+  padding: 0;
 }
 
 .try-btn {
