--- a/src/components/detail/detail.scss
+++ b/src/components/detail/detail.scss
@@ -306,16 +306,143 @@
   }
 }
 
-/* 
+.skill-content {
+  padding: 64px 152px 64px 189px;
 
-box-sizing: border-box;
+  .skill-title {
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 36px;
+    color: #ff5600;
+  }
 
-position: absolute;
-width: 388px;
-height: 388px;
-left: 1693px;
-top: 1296px;
+  .skill-paragraphs {
+    display: flex;
+    gap: 40px 47px;
+    flex-wrap: wrap;
+    padding-top: 45px;
+    .skill-text {
+      padding: 16px 41px;
+      border: 1px solid #ededed;
+      border-radius: 20px;
+      color: #ededed;
+      font-weight: 300;
+      font-size: 16px;
+      line-height: 19px;
+    }
+  }
+}
 
-border: 1px solid #FF5600;
-border-radius: 10px;
-transform: matrix(-1, 0, 0, 1, 0, 0); */
+.profession-certificat {
+  padding: 117px 132px;
+  background: rgba(237, 237, 237, 0.02);
+  display: flex;
+  gap: 182px;
+  align-items: center;
+
+  .certificate-title {
+    font-weight: 300;
+    font-size: 30px;
+    line-height: 36px;
+    color: #ff5600;
+  }
+
+  &-content {
+    width: 860px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  &-text {
+    font-weight: 100;
+    font-size: 20px;
+    line-height: 24.2px;
+    color: #ededed;
+  }
+
+  &-infos {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    .info-title {
+      font-weight: 300;
+      font-size: 30px;
+      line-height: 36px;
+      color: #10788e;
+    }
+
+    .infos {
+      display: flex;
+      gap: 20px;
+      P {
+        width: 580px;
+      }
+    }
+  }
+}
+
+.teacher- {
+  &content {
+    padding-left: 119px;
+    position: relative;
+    padding-top: 12px;
+
+    .teacher-user {
+      position: absolute;
+      left: 0;
+      top: -25px;
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 17px;
+      color: #ededed;
+    }
+  }
+
+  &container {
+    display: flex;
+    align-items: center;
+    gap: 305px;
+    padding: 54px 0 54px 264px;
+
+    .teacher-image-row {
+      display: flex;
+      padding-left: 20px;
+
+      .teacher-image-col {
+        width: 60px;
+        height: 60px;
+        border: 1px solid #ededed;
+        border-radius: 50%;
+        margin-left: -20px;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    .teacher-paras {
+      display: flex;
+      gap: 143px;
+
+      .teacher-para {
+        display: flex;
+        gap: 8px;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 17px;
+        color: #ededed;
+
+        p.paragraph-with-color {
+          font-weight: 300;
+          font-size: 16px;
+          line-height: 19px;
+          color: #ff5600;
+        }
+      }
+    }
+  }
+}
