--- a/src/components/detail/detail.scss
+++ b/src/components/detail/detail.scss
@@ -11,7 +11,6 @@
     z-index: -1;
 
     img {
-      height: 1100px;
       width: 100%;
     }
   }
@@ -40,7 +39,7 @@
     padding-left: 129px;
     display: flex;
     gap: 21px;
-    padding-top: 29px;
+    padding-top: 81px;
 
     &-left {
       .header-detail-content- {
@@ -115,12 +114,13 @@
         z-index: 100;
         -webkit-box-shadow: 10px 8px 15px 7px rgb(8, 8, 8, 0.4);
         box-shadow: 10px 8px 15px 7px rgb(8, 8, 8, 0.4);
+        margin-top: 90px;
       }
 
       .header-detail-content-logo {
         position: absolute;
         right: 14px;
-        top: 27px;
+        top: 117px;
       }
     }
   }
