impliment signin and signout component

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,7 +1,8 @@
 .footer {
   padding: 85px 141px;
+  background-color: #040404;
 
-  .footer-politic{
+  .footer-politic {
     display: flex;
     align-items: stretch;
     gap: 100px;
