--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
 .header-container {
-  background: #0f0f0f;
+  background: #040404;
   padding: 16px 61px;
   display: flex;
   justify-content: space-between;
@@ -48,5 +48,4 @@
       height: 30px;
     }
   }
-
 }
