--- a/src/components/resetPassword/resetPassword.scss
+++ b/src/components/resetPassword/resetPassword.scss
@@ -3,11 +3,39 @@
   margin: auto;
   padding-top: 206px;
 
+  .feedback-message {
+    position: absolute;
+    right: 20px;
+    top: -200px;
+    padding: 25px;
+    border-radius: 15px;
+    color: #ededed;
+    transform-origin: top bottom;
+
+    &.success {
+      top: 20px;
+      background: #10788e;
+    }
+
+    &.error {
+      top: 20px;
+      background: #ededed;
+      color: red;
+    }
+  }
+
   &-content {
     display: flex;
     flex-direction: column;
     gap: 35px;
     margin-top: 50px;
+
+    h4 {
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 17px;
+      color: #ededed;
+    }
 
     input {
       width: 435px !important;
