--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -11,25 +11,13 @@
     position: relative;
     border: none;
     border-radius: 0px 0px 20px 20px;
-    background-color: #131313;
+    background: #040404;
   }
 
   .image-search {
     position: absolute;
     right: 35px;
     top: 20px;
-  }
-
-  .input-text-content {
-    h4 {
-      font-weight: 100;
-      font-size: 20px;
-      line-height: 24px;
-      display: flex;
-      align-items: center;
-      color: #ededed;
-      margin-bottom: 4px;
-    }
   }
 }
 
@@ -41,6 +29,82 @@
     display: flex;
     align-items: center;
     color: #ededed;
-    margin-bottom: 5px;
+    margin-bottom: 14px;
   }
+}
+
+.checkbox-wrapper-40 {
+  --borderColor: #ededed;
+  --borderWidth: 0.125em;
+}
+
+.checkbox-wrapper-40 label {
+  display: flex;
+  max-width: 100%;
+  margin: 0 auto;
+  gap: 25px;
+  align-items: center;
+
+  span {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #ededed;
+  }
+}
+
+.checkbox-wrapper-40 input[type="checkbox"] {
+  -webkit-appearance: none;
+  appearance: none;
+  vertical-align: middle;
+  background: transparent;
+  font-size: 1.8em;
+  border-radius: 0.125em;
+  display: inline-block;
+  border: var(--borderWidth) dashed var(--borderColor);
+  width: 50px;
+  border-radius: 10px;
+  height: 50px;
+  position: relative;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:before,
+.checkbox-wrapper-40 input[type="checkbox"]:after {
+  content: "";
+  position: absolute;
+  background: var(--borderColor);
+  width: calc(var(--borderWidth) * 3);
+  height: var(--borderWidth);
+  top: 50%;
+  left: 30%;
+  transform-origin: left center;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:before {
+  transform: rotate(45deg)
+    translate(calc(var(--borderWidth) / -2), calc(var(--borderWidth) / -2))
+    scaleX(1);
+  transition: transform 200ms ease-in 200ms;
+  opacity: 0.5;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:after {
+  width: calc(var(--borderWidth) * 5);
+  transform: rotate(-45deg) translateY(calc(var(--borderWidth) * 2)) scaleX(1);
+  transform-origin: left center;
+  transition: transform 200ms ease-in;
+  opacity: 0.5;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:checked:before {
+  transform: rotate(45deg)
+    translate(calc(var(--borderWidth) / -2), calc(var(--borderWidth) / -2))
+    scaleX(1);
+  transition: transform 200ms ease-in;
+  opacity: 1;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:checked:after {
+  width: calc(var(--borderWidth) * 5);
+  transform: rotate(-45deg) translateY(calc(var(--borderWidth) * 2)) scaleX(1);
+  transition: transform 200ms ease-out 200ms;
+  opacity: 1;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:focus {
+  outline: calc(var(--borderWidth) / 2) dotted rgba(0, 0, 0, 0.25);
 }
