--- a/src/components/student/student.scss
+++ b/src/components/student/student.scss
@@ -72,6 +72,7 @@
         display: flex;
         align-items: center;
         color: #ededed;
+        margin-top: 27px;
       }
 
       &-image {
