Worked with router

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -26,6 +26,12 @@
     }
   }
 
+  .logOutBtn {
+    background-color: transparent;
+    border: none;
+    outline: none;
+  }
+
   .header-right,
   .search-content {
     display: flex;
