--- a/src/components/detail/detail.scss
+++ b/src/components/detail/detail.scss
@@ -43,6 +43,20 @@
 
     &-left {
       .header-detail-content- {
+        &logo {
+          background: rgba(237, 237, 237, 0.1);
+          border-radius: 15px 0 0 15px;
+          padding: 23px;
+          margin-bottom: 47px;
+          display: flex;
+          justify-content: flex-start;
+          text-align: start;
+          img {
+            height: 40px;
+            object-fit: contain;
+          }
+        }
+
         &paras {
           display: flex;
           flex-direction: column;
@@ -106,21 +120,19 @@
       position: relative;
       width: 694px;
       height: 438px;
-      border-radius: 20px;
-      .header-detail-content-img {
-        border-radius: 20px;
-        width: 100%;
-        height: 100%;
-        z-index: 100;
-        -webkit-box-shadow: 10px 8px 15px 7px rgb(8, 8, 8, 0.4);
-        box-shadow: 10px 8px 15px 7px rgb(8, 8, 8, 0.4);
-        margin-top: 90px;
-      }
-
-      .header-detail-content-logo {
-        position: absolute;
-        right: 14px;
-        top: 117px;
+      border-radius: 0 15px 15px 15px;
+      padding: 32px;
+      background-color: rgba(237, 237, 237, 0.1);
+      margin-left: -21px;
+      .header-detail-content {
+        &-img {
+          border-radius: 20px;
+          width: 100%;
+          height: 100%;
+          z-index: 100;
+          -webkit-box-shadow: 10px 8px 15px 7px rgb(8, 8, 8, 0.4);
+          box-shadow: 10px 8px 15px 7px rgb(8, 8, 8, 0.4);
+        }
       }
     }
   }
@@ -250,6 +262,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        img {
+          object-fit: cover;
+        }
       }
 
       .ellispe-img {
@@ -454,7 +470,7 @@
 
     .trophe-col {
       padding-left: 117px;
-      padding-top: 53px;
+      padding-top: 43px;
       display: flex;
       gap: 53px;
       align-items: center;
@@ -494,11 +510,11 @@
     &::after {
       content: "";
       position: absolute;
-      bottom: -20px;
+      bottom: -24px;
       left: 141px;
       height: 110px;
       width: 1px;
-      background-color: #ededed;
+      background-color: #ff5600;
     }
   }
 
@@ -514,30 +530,27 @@
     }
 
     &:first-child:after {
-      content: "";
-      position: absolute;
       top: -15px;
       left: 0;
-      height: 50%;
-      width: 1px;
-      background-color: #ededed;
+      height: 52%;
     }
 
     &::after {
       content: "";
       position: absolute;
-      top: -40%;
+      top: -90px;
+      bottom: 0;
       left: 0;
-      height: 84%;
+      height: 86%;
       width: 1px;
       background-color: #ededed;
     }
 
-    ::before {
+    &::before {
       content: "";
       position: absolute;
       left: -10px;
-      bottom: 43%;
+      bottom: 96px;
       width: 20px;
       height: 20px;
       border: 1px solid #ededed;
@@ -545,10 +558,50 @@
     }
 
     .several-course-col-image {
+      border-radius: 15px;
+      position: relative;
+      z-index: -1;
       img {
         width: 250px;
         height: 132px;
         object-fit: cover;
+        border-radius: 15px;
+      }
+
+      .image-play-content {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+      }
+
+      .image-play {
+        width: 38px;
+        height: 38px;
+      }
+
+      &::after {
+        background: linear-gradient(
+          180deg,
+          rgba(237, 237, 237, 0) 0%,
+          #ededed 100%
+        );
+        border-radius: 15px;
+        content: "";
+        position: absolute;
+        left: 0;
+        opacity: 0.5;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
       }
     }
 
@@ -622,7 +675,7 @@
     .certificate-image {
       position: absolute;
       right: 40px;
-      top: 25px;
+      top: 35px;
     }
   }
 }
@@ -697,4 +750,7 @@
   h3.swiper-text {
     color: #ff5600 !important;
   }
+}
+.d-block {
+  display: block;
 }
