--- a/src/components/detail/detail.scss
+++ b/src/components/detail/detail.scss
@@ -3,6 +3,10 @@
   padding-bottom: 85px;
   height: 100%;
 
+  .about-certificate-paragraph-color {
+    color: #ff5600 !important;
+  }
+
   .detail-header-image-content {
     position: absolute;
     top: 0;
