--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -21,6 +21,70 @@
   }
 }
 
+.filter-input {
+  &.label-input {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    & + & {
+      margin-top: 1em;
+    }
+
+    input[type="checkbox"] {
+      -webkit-appearance: none;
+      appearance: none;
+      background-color: transparent;
+      margin: 0;
+
+      font: inherit;
+      color: currentColor;
+      width: 1.15em !important;
+      height: 1.15em !important;
+      border: 0.15em solid #ffffff;
+      border-radius: 0.15em;
+      transform: translateY(-0.075em);
+
+      display: grid;
+      place-content: center;
+    }
+
+    input[type="checkbox"]::before {
+      content: "";
+      width: 0.65em;
+      height: 0.65em;
+      clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+      transform: scale(0);
+      transform-origin: bottom left;
+      transition: 120ms transform ease-in-out;
+      box-shadow: inset 1em 1em #ffffff;
+      /* Windows High Contrast Mode */
+      background-color: CanvasText;
+    }
+
+    input[type="checkbox"]:checked::before {
+      transform: scale(1);
+    }
+
+    input[type="checkbox"]:focus {
+      outline: max(2px, 0.15em) solid #ffffff;
+    }
+
+    input[type="checkbox"]:disabled {
+      --form-control-color: #ffffff;
+      color: #959495;
+      cursor: not-allowed;
+    }
+
+    span {
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 17px;
+      color: #ededed;
+      opacity: 0.5;
+    }
+  }
+}
+
 .input-text-content {
   h4 {
     font-weight: 100;
