--- a/src/components/student/whatNext/whatNext.scss
+++ b/src/components/student/whatNext/whatNext.scss
@@ -1,6 +1,7 @@
-.what-next-container {
+.what-next-container,
+.category-prop {
   padding: 109px 145px 121px;
-  background: #000000;
+  background: #1e1e1e;
 
   &.what-next-flex {
     display: flex;
