--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -172,3 +172,23 @@
 .checkbox-wrapper-40 input[type="checkbox"]:focus {
   outline: calc(var(--borderWidth) / 2) dotted rgba(0, 0, 0, 0.25);
 }
+
+.btn-join-common {
+  border: none;
+  background: #0f0f0f;
+  box-shadow: 0px 5px 5px #ff5600;
+  border-radius: 15px;
+  font-weight: 100;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ededed;
+  padding: 20px 60px;
+
+  &:hover,
+  &:focus {
+    background: #ff5600;
+    box-shadow: 0px 5px 5px #ededed;
+    border-radius: 15px;
+    color: #ededed;
+  }
+}
