--- a/src/components/joinUs/joinUs.scss
+++ b/src/components/joinUs/joinUs.scss
@@ -59,6 +59,22 @@
     width: 601px;
     text-align: center;
 
+    .btn-register-google {
+      background: #0f0f0f;
+      box-shadow: 0px 1px 5px #ff5600;
+      border-radius: 20px;
+      padding: 13px 100px;
+      border: none;
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 17px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #ededed;
+      gap: 10px;
+    }
+
     p {
       font-weight: 300;
       font-size: 14px;
@@ -157,6 +173,27 @@
     .status-content {
       display: flex;
       gap: 55px;
+    }
+  }
+
+  .register-container {
+    position: relative;
+    padding-left: 290px;
+
+    &::after {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      height: 100%;
+      width: 3px;
+      background: rgba(237, 237, 237, 0.02);
+      border-radius: 10px;
+      content: "";
+    }
+
+    h4 {
+      width: max-content;
     }
   }
 }
