--- a/src/components/student/menu/menu.scss
+++ b/src/components/student/menu/menu.scss
@@ -1,11 +1,12 @@
 .menu-content {
   position: fixed;
   right: 0;
-  top: 25%;
+  top: 13%;
   padding: 33px 13px;
   background: #0f0f0f;
   box-shadow: 0px 5px 5px #ff5600;
   border-radius: 30px 0 0 30px;
+  z-index: 1000;
   .menu-row {
     display: flex;
     flex-direction: column;
