course container and Filter have been changed

--- a/src/components/main/howIsWork/howIsWork.scss
+++ b/src/components/main/howIsWork/howIsWork.scss
@@ -63,7 +63,7 @@
 
   .image {
     width: 100%;
-    height: 567px;
+    height: 350px;
     border-radius: 30px;
     object-fit: cover;
   }
@@ -109,7 +109,7 @@
     margin-top: 10px;
     color: #ededed;
     position: absolute;
-    bottom: 58px;
+    bottom: 0;
     left: 0;
     right: 0;
     z-index: 1;
