--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -193,9 +193,37 @@
   }
 }
 
+.select_box {
+  position: relative;
+  &:after {
+    width: 3px;
+    height: 25px;
+    position: absolute;
+    top: 0px;
+    right: 5px;
+    content: "";
+    z-index: 98;
+    background-color: #ededed;
+    transform: rotate(45deg) translate(10px, -6px);
+  }
+
+  &::before {
+    width: 3px;
+    height: 25px;
+    position: absolute;
+    background-color: #ededed;
+    top: 10%;
+    right: 10px;
+    content: "";
+    z-index: 18;
+    transform: rotate(-45deg);
+  }
+}
+
 .select-user {
   border: none;
   background-color: transparent;
+  padding-right: 30px;
   font-weight: 100;
   font-size: 20px;
   line-height: 24px;
@@ -203,6 +231,10 @@
   align-items: center;
   color: #ededed;
   gap: 40px;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
   &:focus {
     border: none;
@@ -212,4 +244,19 @@
   option {
     color: #040404;
   }
+}
+
+.btn-interface {
+  border: none;
+  padding: 13px 40px;
+  background: rgba(255, 128, 1, 0.5);
+  box-shadow: 0px 2px 0px #ededed;
+  border-radius: 15px;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  align-items: center;
+  color: #ededed;
+  width: 118px;
 }
