--- a/src/components/courses/course.scss
+++ b/src/components/courses/course.scss
@@ -268,6 +268,22 @@
           align-items: center;
           text-align: center;
           color: #ededed;
+          padding-bottom: 10px;
+
+          &.active {
+            position: relative;
+            &::after {
+              position: absolute;
+              content: "";
+              width: 100%;
+              height: 3px;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              background: #d9d9d9;
+              border-radius: 5px;
+            }
+          }
         }
       }
     }
