--- a/src/components/resetPassword/resetPassword.scss
+++ b/src/components/resetPassword/resetPassword.scss
@@ -1,8 +1,23 @@
 .reset-password {
-  width: 435px;
-  margin: auto;
-  padding-top: 206px;
+  height: 50vh;
+  position: relative;
+  padding-left: 175px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
+  &::after {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+    background: rgba(237, 237, 237, 0.02);
+    border-radius: 10px;
+    content: "";
+  }
   .feedback-message {
     position: absolute;
     right: 20px;
@@ -26,25 +41,26 @@
 
   &-content {
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 35px;
-    margin-top: 50px;
 
     h4 {
-      font-weight: 300;
-      font-size: 14px;
-      line-height: 17px;
+      font-weight: 500;
+      font-size: 36px;
+      line-height: 43px;
+      text-align: center;
       color: #ededed;
-    }
-
-    input {
-      width: 435px !important;
     }
 
     button {
       font-weight: 300;
       font-size: 14px;
       line-height: 17px;
+    }
+
+    input {
+      width: 459px !important;
     }
 
     .link-reset {
